welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: not enough arguments for method apply: (i: Int)java.awt.Color in class Array.
Unspecified value parameter i.
		setCouleurBrosse(tab())
                                    ^